# robotdog

./: LICENSE  README.md
Clothoids/: .gitignore  Makefile
Clothoids/matlab/: .gitignore  ClothoidCurve.m
navigation/: CMakeLists.txt
navigation/include/: control.hpp  hardwareglobalinterface.hpp  hardwareparameters.hpp  pathFitter.hpp  robodogController.hpp  robotstatus.h  single_thread.hpp  smooth.hpp  timer.hpp  utils.hpp
navigation/include/zmq/: RequesterSimple.hpp  Subscriber.hpp
navigation/source/: control.cpp  hardwareglobalinterface.cpp  main.cpp  pathFitter.cpp  robodogController.cpp  smooth.cpp
navigation/source/zmq/: Publisher.cc  RequesterSimple.cpp  Subscriber.cc
tesi_stefano/home/stefano_leonardi_aRobotToFollowPeople_cpp/: CMakeLists.txt  README.md  dnnModels_performancesComparison.txt  run.sh
tesi_stefano/home/stefano_leonardi_aRobotToFollowPeople_cpp/docs/: .gitignore  Doxyfile
tesi_stefano/home/stefano_leonardi_aRobotToFollowPeople_cpp/exec/: classifier_GoogleResNet.cc  detector_SsdYolo.cc  detector_onlineSSD.cc  detector_onlineYOLO.cc  main.cc  main3D.cc  test_dnnModel.cc  test_knn.cc  tracker_all.cc
tesi_stefano/home/stefano_leonardi_aRobotToFollowPeople_cpp/src/: dnnModel.cc  follower3D.cc  knn.cc  logger3D.cc  player3D.cpp  trtNet.cc  utils.cc  videoIO.cc  videoIO3D.cc
tesi_stefano/home/stefano_leonardi_aRobotToFollowPeople_cpp/src/include/: circular_buffer.hh  classifier.hh  dnnModel.hh  follower.hh  follower3D.hh  knn.hh  logger3D.hh  player3D.hh  utils.hh  videoIO.hh  videoIO3D.hh
tesi_stefano/home/stefano_leonardi_aRobotToFollowPeople_cpp/src/include/zmq/: Publisher.hh
tesi_stefano/home/stefano_leonardi_aRobotToFollowPeople_cpp/src/zmq/: Subscriber.cc
tracking/: CMakeLists.txt
tracking/data/: mappaRobodogC.pgm  mappaRobodogC.yaml  paramsLocal.json  paramsRobot.json
tracking/include/: MapManager.hpp  kalman.hpp  matrix.h  params.hpp  utils.hpp
tracking/include/zmq/: Subscriber.hh
tracking/source/: MapManager.cpp  mainFilter.cpp  mainFusion.cpp  params.cpp  visualDebug.cpp
tracking/source/zmq/: Publisher.cc  Subscriber.cc
